# wipro-intel-genai-hackathon

./: .gitignore  README.md  app.py  app_launcher.py  config.py  logger_config.py  pyproject.toml  requirements.txt  sanity_app.py  sanity_library_imports.py  sanity_llama_model.py  test_check.py  ui_text_config.py
.streamlit/: config.toml
data/: symptoms_conditions.json
data/runtime/metrics/: performance_metrics.json
data/seed/: preventive_tips.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  MODULES.md  MONITORING.md  SETUP.md
llm/: conditions_info.json  endpoint_client.py  langchain_adapter.py  model_loader.py  prompt_templates.py
rag/: data_loader.py  embedder.py  retriever.py  vector_store.py
sanity_scripts/: sanity_app.py  sanity_app_components.py  sanity_library_imports.py  sanity_llama_model.py
scripts/sanity/: sanity_app.py  sanity_app_components.py  sanity_library_imports.py  sanity_llama_model.py
src/: __init__.py
src/app/: __init__.py  main.py  main_single_turn_bcp_15_04_26.py
src/app/config/: settings.py  ui_text.py
src/app/core/: error_handling.py  logging.py  metrics.py
src/app/llm/: endpoint_client.py  langchain_adapter.py  model_loader.py  prompt_templates.py
src/app/rag/: data_loader.py  embedder.py  retriever.py  vector_store.py
src/app/safety/: safety_filter.py
src/app/ui/: chat_interface.py  metrics_dashboard.py  metrics_dashboard_tabular.py  sidebar.py  source_utils.py  styles.py
ui/: chat_interface.py  sidebar.py
utils/: safety_filter.py
